# ARCHICAD-ADD-ONS-Manager

./: CMakeLists.txt
Sources/AddOn/: AddOnMain.cpp  Controls.cpp  Controls.hpp  TemplateDialog.cpp  TemplateDialog.hpp
Sources/AddOnResources/RFIX/: AddOnFix.grc
Sources/AddOnResources/RINT/: AddOn.grc
